# LazyKnightEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GeneratorExpressions.cmake  Helpers.cmake  README.md  dependencies.json  fetch-dependencies.py  generate-project.py  vs-chromium-project.txt
engine/: CMakeLists.txt  Dependencies.cmake
engine/cmake/: LazyEConfig.cmake.in  LazyKnightConfig.cmake.in  LazyKnightEngineConfig.cmake.in
engine/include/lazye/: asserts.h  graphics.h  lazye.h  lazyedll.h  logger.h  macros.h  math.h
engine/include/lazye/assets/: assetloader.h  modelloader.h  textureloader.h
engine/include/lazye/core/: component.h  entity.h  world.h
engine/include/lazye/graphics/: camera.h  graphicsfactory.h  irenderable.h  mesh.h  model.h  modelcomponent.h  renderingcomponent.h  renderingcontext.h  sprite.h  spritecomponent.h  texture.h  window.h
engine/include/lazye/math/: math.h  matrix.h  physic_units.h  quaternions.h  transform.h  vectors.h
engine/include/lke/: asserts.h  lke.h  lkedll.h  logger.h
engine/include/lke/assets/: modelloader.h  textureloader.h
engine/include/lke/core/: component.h  entity.h  world.h
engine/include/lke/graphics/: camera.h  graphicsfactory.h  mesh.h  model.h  modelcomponent.h  renderingcomponent.h  renderingcontext.h  sprite.h  spritecomponent.h  texture.h  window.h
engine/include/lke/math/: math.h  matrix.h  physic_units.h  quaternions.h  transform.h  vectors.h
engine/src/: CMakeLists.txt  graphics.cpp
engine/src/core/: CMakeLists.txt  entity.cpp
engine/src/graphics/: CMakeLists.txt  renderingcomponent.cpp  renderingcontext.cpp  spritecomponent.cpp  window.cpp
engine/src/lazye/: CMakeLists.txt  logger.cpp
engine/src/lazye/assets/: CMakeLists.txt  assetloader.cpp  modelloader.cpp  textureloader.cpp
engine/src/lazye/backends/: CMakeLists.txt  backenddefines.h
engine/src/lazye/backends/assimp/: CMakeLists.txt  assimpassetloader.cpp  assimpassetloader.h  assimpmodelloader.cpp  assimpmodelloader.h
engine/src/lazye/backends/cmake/: BackendDefines.h.in
engine/src/lazye/backends/opengl/: CMakeLists.txt  openglapi.cpp  openglapi.h  openglbufferobject.h  openglfragmentshader.h  openglmesh.cpp  openglmesh.h  openglprogram.cpp  openglprogram.h  openglshader.cpp  openglshader.h  openglsprite.cpp  openglsprite.h  opengltexture.cpp  opengltexture.h  opengltypetraits.h  opengluniformhelper.h  openglvertexarrayobject.cpp  openglvertexarrayobject.h  openglvertexattribute.cpp  openglvertexattribute.h  openglvertexshader.h
engine/src/lazye/backends/opengl/builtin_shaders/: CMakeLists.txt  shader_template.h.in
engine/src/lazye/backends/sdl/: CMakeLists.txt  sdlgraphicsfactory.cpp  sdlgraphicsfactory.h  sdlheader.h  sdlhelper.h  sdlrenderingcontext.cpp  sdlrenderingcontext.h  sdlsprite.cpp  sdlsprite.h  sdlsystem.cpp  sdlsystem.h  sdlwindow.cpp  sdlwindow.h  sdlwindowbase.cpp  sdlwindowbase.h
engine/src/lazye/backends/sdl/assets/: sdltextureloader.cpp  sdltextureloader.h
engine/src/lazye/backends/sdl/opengl/: CMakeLists.txt  sdlglcontext.cpp  sdlglcontext.h  sdlglgraphicsfactory.cpp  sdlglgraphicsfactory.h  sdlglrenderingcontext.cpp  sdlglrenderingcontext.h  sdlglsprite.cpp  sdlglsprite.h  sdlgltextureloader.cpp  sdlgltextureloader.h  sdlglwindow.cpp  sdlglwindow.h
engine/src/lazye/backends/sfml/: CMakeLists.txt  sfmlgraphicsfactory.cpp  sfmlgraphicsfactory.h  sfmlrenderingwindow.cpp  sfmlrenderingwindow.h  sfmlsprite.cpp  sfmlsprite.h
engine/src/lazye/core/: CMakeLists.txt  entity.cpp  world.cpp
engine/src/lazye/graphics/: CMakeLists.txt  camera.cpp  graphicsfactory.cpp  model.cpp  modelcomponent.cpp  renderingcomponent.cpp  renderingcontext.cpp  sprite.cpp  spritecomponent.cpp
engine/src/lazye/math/: CMakeLists.txt  math.cpp  quaternions.cpp  transform.cpp
engine/src/lke/: CMakeLists.txt  logger.cpp
engine/src/lke/assets/: CMakeLists.txt  modelloader.cpp  textureloader.cpp
engine/src/lke/backends/: CMakeLists.txt
engine/src/lke/backends/assimp/: CMakeLists.txt  assimpmodelloader.cpp  assimpmodelloader.h
engine/src/lke/backends/cmake/: BackendDefines.h.in
engine/src/lke/backends/opengl/: CMakeLists.txt  openglapi.cpp  openglapi.h  openglbufferobject.h  openglfragmentshader.h  openglmesh.cpp  openglmesh.h  openglprogram.cpp  openglprogram.h  openglshader.cpp  openglshader.h  opengltexture.cpp  opengltexture.h  opengltypetraits.h  opengluniformhelper.h  openglvertexarrayobject.cpp  openglvertexarrayobject.h  openglvertexattribute.cpp  openglvertexattribute.h  openglvertexshader.h
engine/src/lke/backends/opengl/builtin_shaders/: shader_template.h.in
engine/src/lke/backends/sdl/: CMakeLists.txt  sdlhelper.h  sdlsystem.cpp  sdlsystem.h  sdlwindowbase.cpp  sdlwindowbase.h
engine/src/lke/backends/sdl/assets/: CMakeLists.txt  sdltextureloader.cpp  sdltextureloader.h
engine/src/lke/core/: CMakeLists.txt  entity.cpp  world.cpp
engine/src/lke/graphics/: CMakeLists.txt  camera.cpp  graphicsfactory.cpp  model.cpp  modelcomponent.cpp  renderingcomponent.cpp  renderingcontext.cpp  sprite.cpp  spritecomponent.cpp
engine/src/lke/math/: CMakeLists.txt  math.cpp  quaternions.cpp  transform.cpp
engine/src/math/: CMakeLists.txt
engine/tests/: CMakeLists.txt  test_matrix.cpp  test_quaternions.cpp  test_vectors.cpp  vectors.cpp
practice/: CMakeLists.txt
practice/basic-scene/: CMakeLists.txt  main.cpp
practice/hello-lazye/: CMakeLists.txt  main.cpp
practice/hello-window/: CMakeLists.txt  main.cpp
project_template/: CMakeLists.txt  main.cpp
samples/: CMakeLists.txt
samples/basic-mesh/: CMakeLists.txt  main.cpp
samples/basic-mesh/Resources/: Knight.fbx
samples/basic-mesh/Resources/Knight/: README.txt  scene.gltf
samples/basic-scene/: CMakeLists.txt  main.cpp
samples/hello-lazye/: CMakeLists.txt
samples/hello-lazyknight/: CMakeLists.txt  main.cpp
samples/hello-window/: CMakeLists.txt  main.cpp
samples/knight-parade/: CMakeLists.txt  main.cpp
samples/knight-parade/Resources/: README.md
samples/transform-scene/: CMakeLists.txt  main.cpp
(+14 files in other folders)
